@@ -7,6 +7,10 @@ glibc (2.19-14) UNRELEASED; urgency=medium
   [ Adam Conrad ]
   * debian/rules.d/tarball.mk: Fix update-from-upstream manual/* filter rule.
 
+ [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 5688 (from glibc-bsd).
+    Do not return EINTR from sigwait. Closes: #763705.
+
  -- Samuel Thibault <sthibault@debian.org>  Fri, 07 Nov 2014 13:48:08 +0000
 
 glibc (2.19-13) unstable; urgency=medium
